@@ -1,5 +1,6 @@
 LIST OF CHANGES for npg_ranger project
 
+  - use npg_ranger server for roundtrip tests
   - upgrade fs-extra to 1.0.0 from ^0.30.0
   - upgrade winston to 2.3.0 from 2.2.0
 
